Replace `insert_drive_file` with `draft`

--- a/api/src/database/system-data/fields/files.yaml
+++ b/api/src/database/system-data/fields/files.yaml
@@ -49,7 +49,7 @@ fields:
   - field: storage_divider
     interface: presentation-divider
     options:
-      icon: insert_drive_file
+      icon: draft
       title: $t:field_options.directus_files.storage_divider
     special:
       - alias
