Replace `local_offer` with `sell`

--- a/api/src/database/system-data/fields/files.yaml
+++ b/api/src/database/system-data/fields/files.yaml
@@ -23,7 +23,7 @@ fields:
   - field: tags
     interface: tags
     options:
-      iconRight: local_offer
+      iconRight: sell
     special:
       - cast-json
     width: full
